--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "next": "^13.4.12",
     "next-seo": "^6.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-jsx-plugin-postcss": "^4.0.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.12",
+    "@styled-jsx/plugin-sass": "^4.1.0",
     "@types/node": "^20.4.4",
     "@types/react": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
@@ -47,9 +47,9 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
+    "sass": "^1.64.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
